--- a/tactical_analyses/02.3_pleiotropy-analyses.Rmd
+++ b/tactical_analyses/02.3_pleiotropy-analyses.Rmd
@@ -39,13 +39,13 @@ df <- fread(analysis.dir%&%"classified-loci_weighted_with-shared.txt")
 ```{r}
 
 (dplyr::select(df,-contains("assigned_")) %>% arrange(.,desc(islet)) %>% 
-   filter(.,islet > 0.9))$symbol %>% unique(.)
+   filter(.,islet > 0.8))$symbol %>% unique(.)
 (dplyr::select(df,-contains("assigned_")) %>% arrange(.,desc(liver)) %>%
-    filter(.,liver > 0.9))$symbol %>% unique(.)
+    filter(.,liver > 0.8))$symbol %>% unique(.)
 (dplyr::select(df,-contains("assigned_")) %>% arrange(.,desc(adipose)) %>% 
-    filter(.,adipose > 0.9))$symbol %>% unique(.)
+    filter(.,adipose > 0.8))$symbol %>% unique(.)
 (dplyr::select(df,-contains("assigned_")) %>% arrange(.,desc(muscle)) %>% 
-    filter(.,muscle > 0.87))$symbol %>% unique(.)
+    filter(.,muscle > 0.80))$symbol %>% unique(.)
 
 ```
 
@@ -61,19 +61,19 @@ prim.df <- filter(df,signum=="1")
 
 # Islet 
 (dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(islet)) %>% 
-   filter(.,islet > 0.9))$Locus.ID %>% length(.) # 12
+   filter(.,islet > 0.8))$Locus.ID %>% length(.) # 12
 (dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(islet)) %>% 
-   filter(.,islet > 0.9)) %>% View(.)
+   filter(.,islet > 0.8)) %>% View(.)
 # Liver
 (dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(liver)) %>%
-    filter(.,liver > 0.9))$Locus.ID %>% length(.) # 4
+    filter(.,liver > 0.8))$Locus.ID %>% length(.) # 4
 (dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(liver)) %>%
-    filter(.,liver > 0.9)) %>% View(.)
+    filter(.,liver > 0.8)) %>% View(.)
 # Adipose 
 (dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(adipose)) %>% 
-    filter(.,adipose > 0.9))$Locus.ID %>% length(.) # 1 
+    filter(.,adipose > 0.8))$Locus.ID %>% length(.) # 1 
 (dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(adipose)) %>% 
-    filter(.,adipose > 0.9)) %>% View(.)
+    filter(.,adipose > 0.8)) %>% View(.)
 
 ```
 
@@ -361,7 +361,7 @@ Fine-mapped to a single SNP
 
 ```{r}
 
-divvy.df <- fread(analysis.dir%&%"annotation-divvy-weighted-unscaled.txt")
+divvy.df <- fread(analysis.dir%&%"annotation-scores-signals.txt")
 
 s.df <- filter(df,sep.score<=0.10) # Note using difference between top two as measure for specificity, threshold used is 0.10, more directly interpretable than SSD 
 s.df$lead.snp <- map(s.df$Locus.ID,function(id){
@@ -370,14 +370,14 @@ s.df$lead.snp <- map(s.df$Locus.ID,function(id){
 
 
 s.df$coding.score <- map(s.df$Locus.ID,function(id){
-  val <- filter(divvy.df,Locus.ID==id) %>% dplyr::select(.,contains("coding")) %>%
+  val <- filter(divvy.df,SIGNAL==id) %>% dplyr::select(.,contains("coding")) %>%
     as.numeric(.) %>% sum(.)
 }) %>% as.numeric(.) 
 
-write.table(x=s.df,file=analysis.dir%&%"shared-signals-120.txt",
+write.table(x=s.df,file=analysis.dir%&%"shared-signals-142.txt",
             sep="\t",quote=F,row.names=F)
 
-s1.df <- filter(s.df,num.snps==1)
+s1.df <- filter(s.df,num.snps==1) # 8 signals 
 
 View(s1.df)
 
@@ -401,7 +401,7 @@ Fine-mapped to more than one variant, but one variant accounts for >50% of PPA
 
 ```{r}
 
-s2.df <- filter(s.df,num.snps>1,max.ppa>0.5) # 23 signals, including lead signal at TCF7L2, and two signals at HNF4A
+s2.df <- filter(s.df,num.snps>1,max.ppa>0.5) # 33 signals, including lead signal at TCF7L2, and two signals at HNF4A
 
 tab2.df <- dplyr::select(s2.df,one_of("lead.snp","symbol","num.snps","max.ppa",
                                       "coding.score","sep.score","ssd",
@@ -423,7 +423,7 @@ Fine-mapped to more than one variant, but one variant accounts for >50% of PPA
 
 ```{r}
 
-s3.df <- filter(s.df,num.snps>1,max.ppa<=0.5) # 88 signals 
+s3.df <- filter(s.df,num.snps>1,max.ppa<=0.5) # 101 signals 
 
 tab3.df <- dplyr::select(s3.df,one_of("lead.snp","symbol","num.snps","max.ppa",
                                       "coding.score","sep.score","ssd",
@@ -449,8 +449,11 @@ write.table(x=tab3.df,file=analysis.dir%&%"SuppTable_shared_tier3.csv",quote=F,s
 
 ```{r}
 
-an.df <- fread(analysis.dir%&%"annotation-divvy-weighted-unscaled.txt")
-anall.df <- fread(analysis.dir%&%"annotation-divvy-weighted-unscaled_allSNPs.txt")
+an.df <- fread(analysis.dir%&%"annotation-scores-signals.txt")
+names(an.df)[1] <- "Locus.ID"
+anall.df <- fread(analysis.dir%&%"annotation-scores-allSNPs.txt")
+names(anall.df)[1] <- "Locus.ID"
+
 
 
 ```
@@ -468,29 +471,35 @@ get_sig_df <- function(sig){
 
 process_sig_snp <- function(sigsnp.df,ymax=1){
   snpid <- sigsnp.df$SNPID; ppa <- sigsnp.df$ppa
-  test.df <- sigsnp.df[,3:(dim(sigsnp.df)[2]-1)]
-  #test.df <- sub.df[1,3:(dim(sub.df)[2]-1)]
+  test.df <- sigsnp.df[,6:(dim(sigsnp.df)[2]-1)]
   annot <- test.df %>% names(.)
   val <- test.df %>% as.numeric(.)
   
   new.df <- data.frame(annot,val,stringsAsFactors = F)
   new.df$Annotation <- map(new.df$annot,function(a){
-    strsplit(x=a,split="_")[[1]][1]
+    strsplit(x=a,split=".",fixed=TRUE)[[1]][1]
   }) %>% as.character(.)
+  
   new.df$Tissue <- map(new.df$annot,function(a){
-    strsplit(x=a,split="_")[[1]][2]
+    strsplit(x=a,split=".",fixed=TRUE)[[1]][2]
   }) %>% as.character(.)
+  
   names(new.df) <- c("annot","score","Annotation","Tissue")
   new.df$Annotation <- factor(new.df$Annotation,
-                              levels = c("coding","strongprom","weakprom",
-                                         "flankprom","strongenh","weakenh",
-                                         "genenh","stronggenetrans","weakgenetrans"))
+                              levels = c("coding","1_Active_TSS","2_Weak_TSS",
+                                         "3_Flanking_TSS","5_Strong_transcription",
+                                         "6_Weak_transcription","8_Genic_enhancer",
+                                         "9_Active_enhancer_1","10_Active_enhancer_2",
+                                         "11_Weak_enhancer"))
+  
   p <- ggplot(data=new.df,aes(x=Tissue,y=score)) + 
     geom_bar(aes(fill=Annotation),stat="identity",color="black") + 
     coord_cartesian(ylim=c(0,ymax)) + 
-    scale_fill_manual(values=c("grey","firebrick1","firebrick3",
-                               "firebrick4","gold1","gold3","yellowgreen",
-                               "green1","green4")) + 
+    scale_fill_manual(values=c("grey30","#ff0000","#ff4500",
+                               "#ff4500","#008000",
+                               "#006400","#c2e105",
+                               "#ffc34d","#ffc34d",
+                               "#ffff00"))
     theme_bw() + 
     ggtitle(snpid %&% "\nPPA="%&%round(ppa,3))
   return(list(p,new.df))
@@ -525,21 +534,10 @@ ANK1 Muscle signal
 
 ```{r}
 
+#sig <- "135_1" # KCNJ11 lead signal 
+
 sig <- "106_3"
 d <- get_sig_df(sig)
-
-```
-
-
-
-
-KCNJ11 lead signal 
-
-```{r}
-
-sig <- "135_1"
-
-d <- get_sig_df(sig) # just doing the top 10 snps in credible set
 l1 <- process_sig_snp(d[1,],ymax=0.3)
 l2 <- process_sig_snp(d[2,],ymax=0.3)
 l3 <- process_sig_snp(d[3,],ymax=0.3)
@@ -550,6 +548,7 @@ l7 <- process_sig_snp(d[7,],ymax=0.3)
 l8 <- process_sig_snp(d[8,],ymax=0.3)
 l9 <- process_sig_snp(d[9,],ymax=0.3)
 l10 <- process_sig_snp(d[10,],ymax=0.3)
+
 
 p <- grid.arrange(l1[[1]],l2[[1]],l3[[1]],
                   l4[[1]],l5[[1]],l6[[1]],
