--- a/tactical_analyses/04.3_enrichment-plots.Rmd
+++ b/tactical_analyses/04.3_enrichment-plots.Rmd
@@ -117,9 +117,8 @@ eqtl.df$threshold <- map(eqtl.df$threshold,function(v){
 eqtl_enrich_plot <- function(enrich.df,myname){
   enrich.df$threshold <- as.character(enrich.df$threshold)
   plt <- ggplot(data=enrich.df,aes(x=threshold,y=enrichment_snpsnap)) + 
-    geom_point(color="black",shape=21,
-               aes(size=observed_snpsnap,
-                   fill=-log(pvalue_snpsnap,base=10))) + 
+    geom_point(color="black",shape=21,size=3,
+               aes(fill=-log(pvalue_snpsnap,base=10))) + 
     facet_wrap(~tissue_eqtl+tissue_toa) + 
     theme_bw() + 
     scale_y_log10(breaks=c(0.5,2,10,50)) +
@@ -127,7 +126,7 @@ eqtl_enrich_plot <- function(enrich.df,myname){
                          mid = viridis(n=50)[40],
                          midpoint=-log(0.05,base=10),name=expression(-log10(p))) + 
     
-    scale_size(range=c(1,3.5),limits=c(0,250)) + 
+    #scale_size(range=c(2,3.5),name=expression(-log10(p))) + 
     #scale_x_continuous(breaks=c(0,0.2,0.5,0.8)) + 
     xlab("Threshold") + ylab("Enrichment") + 
     ggtitle(myname) +
