--- a/tactical_analyses/02.3_pleiotropy-analyses.Rmd
+++ b/tactical_analyses/02.3_pleiotropy-analyses.Rmd
@@ -30,7 +30,9 @@ cred.df <- fread(work.dir %&% "genetic_credible_sets/gencred.txt")
 cred.df$Locus.ID <- cred.df$CondID
 
 df <- fread(analysis.dir%&%"classified-loci_weighted_with-shared.txt")
-
+df$max.ppa <- map(df$Locus.ID,function(id){
+  filter(cred.df,CondID==id)$PPA %>% max(.) %>% unique(.)
+}) %>%  as.numeric(.)
 ```
 
 
@@ -49,6 +51,38 @@ df <- fread(analysis.dir%&%"classified-loci_weighted_with-shared.txt")
 
 ```
 
+Using TOA threshold of 0.8, determine signals involving single tissues 
+
+```{r}
+
+filter(df,adipose>=0.8|islet>=0.8|liver>=0.8|muscle>=0.8) %>% dim(.)# 39/380 
+filter(filter(df,max.ppa>=0.5),adipose>=0.8|islet>=0.8|liver>=0.8|muscle>=0.8) %>% dim(.) # 17/101
+
+
+```
+
+```{r}
+(dplyr::select(df ,-contains("assigned_")) %>% arrange(.,desc(islet)) %>% 
+   filter(.,islet > 0.8))$Locus.ID %>% length(.) # 22
+(dplyr::select(df ,-contains("assigned_")) %>% arrange(.,desc(islet)) %>% 
+   filter(.,islet > 0.8)) %>% View(.)
+# Liver
+(dplyr::select(df ,-contains("assigned_")) %>% arrange(.,desc(liver)) %>%
+    filter(.,liver > 0.8))$Locus.ID %>% length(.) # 10
+(dplyr::select(df ,-contains("assigned_")) %>% arrange(.,desc(liver)) %>%
+    filter(.,liver > 0.8)) %>% View(.)
+# Adipose 
+(dplyr::select(df ,-contains("assigned_")) %>% arrange(.,desc(adipose)) %>% 
+    filter(.,adipose > 0.8))$Locus.ID %>% length(.) # 6
+(dplyr::select(df ,-contains("assigned_")) %>% arrange(.,desc(adipose)) %>% 
+    filter(.,adipose > 0.8)) %>% View(.)
+# muscle 
+(dplyr::select(df ,-contains("assigned_")) %>% arrange(.,desc(muscle)) %>% 
+    filter(.,muscle > 0.8))$Locus.ID %>% length(.) # 0 
+(dplyr::select(df ,-contains("assigned_")) %>% arrange(.,desc(muscle)) %>% 
+    filter(.,muscle > 0.8)) %>% View(.)
+```
+
 
 # Limiting to only the PRIMARY signals 
 
@@ -61,19 +95,24 @@ prim.df <- filter(df,signum=="1")
 
 # Islet 
 (dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(islet)) %>% 
-   filter(.,islet > 0.8))$Locus.ID %>% length(.) # 12
+   filter(.,islet > 0.8))$Locus.ID %>% length(.) # 14
 (dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(islet)) %>% 
    filter(.,islet > 0.8)) %>% View(.)
 # Liver
 (dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(liver)) %>%
-    filter(.,liver > 0.8))$Locus.ID %>% length(.) # 4
+    filter(.,liver > 0.8))$Locus.ID %>% length(.) # 5
 (dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(liver)) %>%
     filter(.,liver > 0.8)) %>% View(.)
 # Adipose 
 (dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(adipose)) %>% 
-    filter(.,adipose > 0.8))$Locus.ID %>% length(.) # 1 
+    filter(.,adipose > 0.8))$Locus.ID %>% length(.) # 2
 (dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(adipose)) %>% 
     filter(.,adipose > 0.8)) %>% View(.)
+# muscle 
+(dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(muscle)) %>% 
+    filter(.,muscle > 0.8))$Locus.ID %>% length(.) # 0 
+(dplyr::select(prim.df ,-contains("assigned_")) %>% arrange(.,desc(muscle)) %>% 
+    filter(.,muscle > 0.8)) %>% View(.)
 
 ```
 
